<?xml version="1.0" encoding="utf-8"?><!-- Note that changes are made for this file by Raylan Klitzke Schultz -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title" />

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title" />

    <EditTextPreference
        android:defaultValue="60"
        android:inputType="number"
        android:key="interval"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wakelock"
        android:summaryOff="@string/settings_wakelock_off_summary"
        android:summaryOn="@string/settings_wakelock_on_summary"
        android:title="@string/settings_wakelock" />

</PreferenceScreen>
