<?xml version="1.0" encoding="utf-8"?>
<!-- Note that changes are made for this file by Raylan Klitzke Schultz -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            <LinearLayout
                android:id="@+id/accept_terms_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10sp"
                    android:text="@string/terms_info" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10sp"
                    android:text="@string/data_collection_info" />

                <Button
                    android:id="@+id/botaoTermosUso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:text="@string/terms_of_use" />

                <Button
                    android:id="@+id/botaoPoliticaPrivacidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:text="@string/privacy_policy" />

                <CheckBox
                    android:id="@+id/accept_terms_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/i_accept_the_terms" />

                <CheckBox
                    android:id="@+id/accept_privacy_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/i_accept_the_privacy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/terms_exit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/terms_next_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/next"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loading_terms_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ProgressBar
                    android:id="@+id/loading_terms_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/loading_terms_fail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/error_connection" />

                    <Button
                        android:id="@+id/terms_retry_load"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retry" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>