<?xml version="1.0" encoding="utf-8"?>
<!-- Note that changes are made for this file by Raylan Klitzke Schultz -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10sp"
                android:text="@string/select_app_text" />

            <Button
                android:id="@+id/button_show_web_interface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/select_track_other_devices" />

            <Button
                android:id="@+id/button_device_tracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/select_track_this_device" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>