<?xml version="1.0" encoding="utf-8"?><!-- Note that changes are made for this file by Raylan Klitzke Schultz -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="n_mr1">

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_start"
        android:shortcutId="start"
        android:shortcutShortLabel="@string/shortcut_start">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.traccar.client.ShortcutActivity"
            android:targetPackage="br.com.softquick.rastreio">
            <extra
                android:name="action"
                android:value="start" />
        </intent>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_stop"
        android:shortcutId="stop"
        android:shortcutShortLabel="@string/shortcut_stop">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.traccar.client.ShortcutActivity"
            android:targetPackage="br.com.softquick.rastreio">
            <extra
                android:name="action"
                android:value="stop" />
        </intent>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_sos"
        android:shortcutId="sos"
        android:shortcutShortLabel="@string/shortcut_sos">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.traccar.client.ShortcutActivity"
            android:targetPackage="br.com.softquick.rastreio">
            <extra
                android:name="action"
                android:value="sos" />
        </intent>
    </shortcut>

</shortcuts>
